--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(DSA fibonacci.cpp
         array.cpp
-        tree.c)
+        tree.c
+        AVLtree.c)
