--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(DSA fibonacci.cpp
         array.cpp
         tree.c
-        AVLtree.c)
+        AVLtree.c
+        "Hash Table.c")
